Fix dark mode toggle, light mode `pre`s

--- a/css/main.sass
+++ b/css/main.sass
@@ -113,12 +113,18 @@ cite::before
   a, a:visited
     color: #03A9F4
 
+  pre
+    border: 1px solid darken(#1a2632, 10%)
+    background: lighten(#1a2632, 5%)
+
+
 #dark-mode-link
   position: absolute
   font-size: 1.2em
   top: 0.75em
   right: 0.75em
   text-decoration: none
+  z-index: 1000
 
 
 ul.tags
@@ -149,8 +155,7 @@ article
     text-indent: 1em
 
 pre
-  border: 1px solid darken(#1a2632, 10%)
-  background: lighten(#1a2632, 5%)
+  border: 1px solid #999
   max-width: 100%
   overflow-x: auto
   overflow-y: hidden
